--- a/Landscape.ipynb
+++ b/Landscape.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": 
+   "source": [
+    "**End-to-end Machine Learning project**\n",
+    "\n",
+    "*Machine Learning Housing Corp.! The task is to predict median house values in Californian districts, given a number of features from these districts.*\n",
+    "\n",
+    "*This notebook contains all the codes and details.*"
+   ]
   },
   {
    "cell_type": "markdown",
