--- a/Landscape.ipynb
+++ b/Landscape.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although Python 2.x may work, it is deprecated so we strongly recommend you use Python 3 instead."
+    "Lets's Start."
    ]
   },
   {
